# plenty_attribute_export

./: .gitignore  README.md  pyproject.toml
plenty_attribute_export/: __init__.py  __main__.py  cli.py
