[tool.poetry]
name = "plenty_attribute_export"
version = "0.1.0"
description = "Easy export of attribute data for variations from PlentyMarkets"
authors = ["Sebastian Fricke <sebastian.fricke.linux@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.24.0"
pandas = "^1.1.0"
configparser = "^5.0.0"
simplejson = "^3.17.2"
keyring = "^21.2.1"
tabulate = "^0.8.7"
signalslot = "^0.1.2"
easygui = "^0.98.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
